--- a/src/sections/About/AboutWhyChoose/AboutWhyChoose.css
+++ b/src/sections/About/AboutWhyChoose/AboutWhyChoose.css
@@ -45,6 +45,7 @@
     font-weight: 700;
     margin-top: 0px;
     margin-bottom: 14px;
+    color: #ffffff;
 }
 
 .why-card p {
